--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
      <em>CS Undergrad at <strong><a href="http://iiitg.ac.in/">IIITG</a></strong>.</em>
      <br>
      <br>
-     I am a student of the most premium institute of India i.e.,Indian Institute of Informational Technology Guwahati. I am presently working on Web Development from Angela Yu of Udemy. I have passed my boards with flying colors.The rain and wind
-     abruptly stopped, but the sky still had the gray swirls of storms in the distance. Dave knew this feeling all too well. The calm before the storm. He only had a limited amount of time before all Hell broke loose, but he stopped to admire the
-     calmness. Maybe it would be different this time, he thought, with the knowledge deep within that it wouldn't.
+     I am currently pursuing B.Tech at Indian Institute of Information Technology, Guwahati from Computer Science and Engineering branch. My home state is Telangana.
      </td>
   </table>
   <hr>
@@ -99,3 +97,4 @@
 </body>
 
 </html>
+
